# berry_harvesting_robot

./: .gitignore
docs/rviz/: elfin3_moveit2.rviz
harvesting_robot/: package.xml  setup.cfg  setup.py
harvesting_robot/harvesting_robot/: camera_node.py  control_node.py  eyeinhand_node.py  gripper_node.py  master_node.py  mode1_trajectory_node.py  mode1_vision_node.py  mode2_vision_node.py
harvesting_robot/launch/: eyeinhand.launch.py  eyeinhandkinova.launch.py  harvesting_system.launch.py
harvesting_robot/models/: blackberry.names  yolov4-tiny-custom.cfg
harvesting_robot/urdf/: elfin3.urdf  gen3.urdf
harvesting_robot_agv/: package.xml  setup.cfg  setup.py
harvesting_robot_agv/harvesting_robot_agv/: agv_gui_node.py  ble_agv_bridge_node.py
harvesting_robot_cpp/: CMakeLists.txt  package.xml
harvesting_robot_cpp/src/: mode2_trajectory_node.cpp
robot_description/xacro/: elfin3.urdf.xacro
