<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>harvesting_robot_cpp</name>
  <version>1.0.1</version>
  <description>
    ROS 2 C++ package containing the HyRRT planner node for the berry harvesting system.
  </description>

  <maintainer email="flirizar@gmail.com">Francisco Irizar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>